--- a/resources/sass/grid.scss
+++ b/resources/sass/grid.scss
@@ -46,7 +46,7 @@
         border-radius: 0 0 5px 5px;
         padding: 3px;
         //margin-right: 2px;
-        margin-top: .5px;
+        margin-top: 3px;
         //padding: 4px;
     }
     display: flex;
