--- a/resources/sass/form.scss
+++ b/resources/sass/form.scss
@@ -26,6 +26,7 @@
 
         a {
             margin-left: 6.5px;
-            font-size: 12px;
+            //font-size: 12px;
+            font-size: .75em; 
         }
     }
