--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -6,12 +6,12 @@
     padding: 0;
     outline: none;
     box-sizing: border-box;
-    font-size: 16px;
     font-family: 'Roboto';
 }
 
 body {
     background: $bg-color;
+    font-size: 16px;
     width: 100%;
     //color: hsla(200,0%,0%,.7);
     color: rgba(20, 20, 20, 0.808);
@@ -31,4 +31,15 @@ button {
     //font-weight: 600;
     border: 0;
     background: none;
+}
+
+@media screen and (min-width: 360px){
+    body {
+        font-size: calc(14px + (16 - 14) * ((100vw - 360px) / (1440 - 360)));
+    }
+}
+@media screen and (min-width: 1440px) {
+    body {
+        font-size: 16px;
+    }
 }
