--- a/resources/sass/grid.scss
+++ b/resources/sass/grid.scss
@@ -5,9 +5,13 @@
     display: grid;
     // testar a width com 84.5% e centralizar com a margin
     //width: 100%;
-    width: 84.5px;
+    max-width: 84.5vw;
+    width: 84.5%;
+    height: 100%;
     margin: 0 auto;
-    grid-template-columns: repeat(2, 147px);
+    //grid-template-columns: repeat(2, 147px);
+    grid-template-columns: repeat(auto-fit, minmax(147px, 1fr));
+    grid-auto-rows: minmax(200px, 1fr);
     column-gap: 5px;
     row-gap: 10px;
     gap: 10px;
@@ -16,8 +20,8 @@
 
 .card {
     margin-top: 10px;
-    width: 147px;
-    height: 200px;
+    /*width: 147px;
+    height: 200px;*/
     //border: 1px solid rgb(243, 165, 165);
     border: 1px solid $border-color;
     border-radius: 5px;
@@ -26,13 +30,20 @@
 .img {
     position: relative;
     width: 100%;
-    height: 130px;
+    //height: 130px;
+    height: 64.35%;
     border-bottom: 1px solid $border-color;
 }
 
 .card-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 35.65%;
+    justify-content: space-between;
     h6 {
-        font-size: 21px;
+        //font-size: 21px;
+        font-size: 1.3125em;
         font-weight: 700;
     }
     span {
@@ -40,17 +51,13 @@
     }
     button {
         font-weight: 800;
-        widows: 100%;
-        //align-self: flex-end;
+        width: 100%;
         background: #f8ceb9;
         border-radius: 0 0 5px 5px;
-        padding: 3px;
-        //margin-right: 2px;
+        padding: 2px;
         margin-top: 3px;
-        //padding: 4px;
     }
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 70px;
+}
+.fav-wrapper {
+    color: $border-color;
 }
