--- a/resources/sass/productsForm.scss
+++ b/resources/sass/productsForm.scss
@@ -48,5 +48,13 @@
         background: rgb(224, 140, 140);
         vertical-align: middle;
     }
+    /*input[type="file"] {
+        display: none;
+    }
+
+    input[type="file"] + label {
+        border: 1px solid black;
+        width: 95%;
+    }*/
     
 }
