--- a/resources/sass/table.scss
+++ b/resources/sass/table.scss
@@ -26,6 +26,9 @@ table {
         border: 0;
         background: inherit;
     }
+    td img {
+       width: 100%; 
+    }
 }
 thead, tr, tbody {
 
