--- a/resources/sass/grid.scss
+++ b/resources/sass/grid.scss
@@ -33,6 +33,9 @@
     //height: 130px;
     height: 64.35%;
     border-bottom: 1px solid $border-color;
+    img {
+        width: 100%;
+    }
 }
 
 .card-info {
