--- a/resources/sass/form.scss
+++ b/resources/sass/form.scss
@@ -1,32 +1,56 @@
-    @import './variables';
-    form {
+@import './variables';
+.form-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+}
+form {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    height: 200px;
+    max-width: 350px;
+    padding: 5px;
+    border: 1px solid rgb(73, 71, 71);
+    border-radius: 5px;
+    justify-content: space-evenly;
+    &:nth-child(2) {
+        margin-top: -5px;
+    }
+    h1 {
         align-self: center;
+    }
+    .field {
         display: flex;
         flex-direction: column;
-        //padding: 5px;
-        width: 75%;
-        border: 1px solid rgb(218, 149, 149);
-        border-radius: 5px;
-
-        .field {
-            display: flex;
-            flex-direction: column;
-            align-self: center;
-            width: 95%;
-            margin: 5px;
-        }
-
-        button {
-            font-weight: 800;
-            align-self: flex-end;
-            width: 100%;
-            border-radius: 0 0 5px 5px;
-            background: $button-color;
-        }
-
-        a {
-            margin-left: 6.5px;
-            //font-size: 12px;
-            font-size: .75em; 
-        }
+        align-self: center;
+        width: 95%;
+        margin: 5px;
     }
+
+    button {
+        font-weight: 800;
+        align-self: center;
+        width: 95%;
+        padding: 2px;
+        //border-radius: 0 0 5px 5px;
+        background: $button-color;
+        border: 1px solid $border-color;
+    }
+
+    a {
+        //margin-left: 6.5px;
+        margin-left: 8px;
+        margin-top: -4px; 
+        margin-bottom: 4px; 
+        //font-size: 12px;
+        font-size: .75em; 
+    }
+}
+@media screen and (min-width: 767px) {
+    .form-wrapper {
+        justify-content: center;
+    }
+}
