css for mobile layout

--- a/resources/sass/table.scss
+++ b/resources/sass/table.scss
@@ -27,10 +27,12 @@ table {
         background: inherit;
     }
     td img {
-       width: 100%; 
+       width: 100%;
     }
 }
 thead, tr, tbody {
 
     width: 100%;
 }
+//Usar grid no lugar de table
+//mudar table
