--- a/resources/sass/grid.scss
+++ b/resources/sass/grid.scss
@@ -36,7 +36,7 @@
     border-top: 1px sollid $border-color;
     img {
         width: 100%;
-        height: 100%;
+        height: auto;
     }
 }
 
