--- a/resources/sass/productsForm.scss
+++ b/resources/sass/productsForm.scss
@@ -1,30 +1,73 @@
 
 @import './../../../sass/variables';
+.blur-wrapper {
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    background: rgb(0,0,0,0.4);
+    backdrop-filter: blur(1px);
+    button {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+        margin-right: 20px;
+        height: 30px;
+        width: 30px;
+        border-radius: 50%;
+        background: #dfdfdfc9;
+    }
+}
 .wrapper {
+    position: absolute;
+    top: 20%;
+    z-index: 9999;
     width: 84.5%;
-    margin: 0 auto;
+    
     form {
+        padding: 10px;
+        background: #FFE9DE;
         width: 100%;
+        max-width: 350px;
         display: flex;
         flex-direction: column;
         border: 1px solid $border-color;
-        margin-bottom: 3px;
-        padding-top: 3px;
+        margin: 0 auto;
+    }
+    h1 {
+        width: 95%;
+        margin: 0 auto;
+    }
+    .field {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        width: 95%;
+        margin: 3px;
     }
     .categories-wrapper {
         align-self: center;
         width: 95%;
+        margin-top: 4px;
+        margin-bottom: 4px;
     }
     button {
         background: $button-color;
-        margin-top: 5px;
-        border-top: 1px solid $border-color;
+        margin: 5px auto 0 auto;
+        width: 95%;
+        border: 1px solid $border-color;
     }
     input[type="text"] {
-        align-self: center;
+        //align-self: center;
         border: 1px solid $border-color;
         margin: 2px;
-        width: 95%;
+        //width: 95%;
     }
     input[type="checkbox"] {
         display: none;
