--- a/resources/sass/table2.scss
+++ b/resources/sass/table2.scss
@@ -37,6 +37,10 @@ img {
         padding-left: 50%;
 
     }
+    td div {
+        width: 100%;
+        height: 100%;
+    }
     /*td[data-label="Imagem"] {
         height: 50%;
     }*/
